--- a/StoreWindow.ui
+++ b/StoreWindow.ui
@@ -422,6 +422,25 @@ color : rgb(255, 57, 57);
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="logo_label">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>10</y>
+     <width>50</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">*{
+	background-color: rgb(85, 170, 0);
+border-radius : 25px;
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
