functions added to loginpage and signuppage

--- a/loginpage.ui
+++ b/loginpage.ui
@@ -88,6 +88,9 @@
        <height>31</height>
       </rect>
      </property>
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
+     </property>
     </widget>
     <widget class="QPushButton" name="pushButton_l">
      <property name="geometry">
