--- a/StoreWindow.ui
+++ b/StoreWindow.ui
@@ -44,7 +44,7 @@ background : hover :  rgb(255, 170, 0);
     <string/>
    </property>
   </widget>
-  <widget class="QFrame" name="frame">
+  <widget class="QFrame" name="frame_st">
    <property name="geometry">
     <rect>
      <x>25</x>
@@ -72,7 +72,7 @@ border-radius : 15px;
     <enum>QFrame::Raised</enum>
    </property>
   </widget>
-  <widget class="QFrame" name="frame_2">
+  <widget class="QFrame" name="frame_st_2">
    <property name="geometry">
     <rect>
      <x>340</x>
