i made nail market page

--- a/nice.qss
+++ b/nice.qss
@@ -27,6 +27,13 @@ QPushButton:hover{
  	background-repeat: no-repeat; /* Do not repeat the image */
   	background-size: cover;
 }
+#NailMarket{
+
+	background-image:url(../farm-project/nail_market.jpg);
+	background-position: center; /* Center the image */
+ 	background-repeat: no-repeat; /* Do not repeat the image */
+  	background-size: cover;
+}
 #SheepMarket{
 	background-image:url(../farm-project/sheep_market.jpg);
 	background-position: center; /* Center the image */
